# personal_doc_manager

./: .env  .gitignore  .pre-commit-config.yaml  pyproject.toml  requierements_dev.txt
docs/: README.md  project_overview.md
src/: run.py
src/Personal_Document_Management_System.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/api/: app.py  dependencies.py
src/api/routes/: document_routes.py
src/config/: config.py  logger.py
src/enums/: document_categories.py
src/models/: document.py  person.py  tag.py
src/services/: document_service.py
