[project]
name = "Personal-Document-Management-System"
version = "0.0.1"
description = "A system designed to help individuals digitize, organize, and manage their personal documents efficiently."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "N", "UP", "S", "BLE", "FBT", "C4", "T20", "PT",
    "Q", "SIM", "TID", "ARG", "ERA", "PL", "RUF", "D"
]
ignore = ["D203", "D213"]

[tool.pyupgrade]
py311-plus = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

# Error output verbosity
show_column_numbers = true
show_error_codes = true
color_output = true

# Check complete code
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# Miscellaneous
warn_unused_ignores = true
warn_unused_configs = true

# Performance
cache_dir = ".mypy_cache"
incremental = true

# Excluded modules
exclude = ["docs/*", "scripts/*"]

# Per module settings
[[tool.mypy.overrides]]
module = "my_module"
